--- a/public/cms/less/pages/userMana.less
+++ b/public/cms/less/pages/userMana.less
@@ -11,10 +11,11 @@
   background-color: #f1f1f1;
   font-size:14px;
   .user_table{
-    width: 1143px;
+    width:98%;
     height: 670px;
     border-radius: 4px;
     background:#F1F1F1;
+    margin:0 auto;
     .user_thead,.user_tbody{
       >p{
         background:#fff;
@@ -23,7 +24,8 @@
           text-indent:10px;
           vertical-align: top;
           &:nth-of-type(1){
-            width:50px;
+            width:80px;
+            margin:0 0 0 50px;
           }
           &:nth-of-type(2){
             width:170px;
@@ -32,16 +34,16 @@
             width:105px;
           }
           &:nth-of-type(4){
-            width:169px;
+            width:85px;
           }
           &:nth-of-type(5){
             width:110px;
           }
           &:nth-of-type(6){
-            width:50px;
+            width:170px;
           }
           &:nth-of-type(7){
-            width:190px;
+            width:80px;
           }
           &:nth-of-type(8){
             width:50px;
