--- a/public/cms/less/pages/returnMana.less
+++ b/public/cms/less/pages/returnMana.less
@@ -8,10 +8,11 @@
   top:56px;
   left:220px;
   .return_table{
-    width: 829px;
+    width: 98%;
     height: 670px;
     border-radius: 4px;
     background:#F1F1F1;
+    margin:0 auto;
     .return_thead,.return_tbody{
       >p{
         background:#fff;
@@ -20,7 +21,8 @@
           text-indent:10px;
           vertical-align: top;
           &:nth-of-type(1){
-            width:59px;
+            width:80px;
+            margin:0 0 0 50px;
           }
           &:nth-of-type(2){
             width:170px;
