--- a/public/cms/css/pages/moduleMana.css
+++ b/public/cms/css/pages/moduleMana.css
@@ -518,6 +518,11 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+#moduleMana_main .product_table .product_tbody > p > span img {
+  width: 40px;
+  height: 40px;
+  margin: 5px 0 0 0;
+}
 #moduleMana_main .product_table .product_tbody button {
   height: 25px;
   padding: 0 5px;
@@ -529,9 +534,37 @@ table {
   width: 340px;
   height: 155px;
 }
+#moduleMana_main .add_dialog .add_dialog_main {
+  position: relative;
+}
 #moduleMana_main .add_dialog .add_dialog_main input {
-  height: 32px;
-  line-height: 32px;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
   font-size: 12px;
+  text-indent: 10px;
   margin: 0 0 12px 0;
+}
+#moduleMana_main .add_dialog .add_dialog_main .searchProduct_list {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100px;
+  padding: 5px 10px 0 10px;
+  border-radius: 2px;
+  overflow: auto;
+  background: #fff;
+  position: absolute;
+  top: 38px;
+  left: 1px;
+}
+#moduleMana_main .add_dialog .add_dialog_main .searchProduct_list li {
+  cursor: pointer;
+  height: 25px;
+  line-height: 25px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+#moduleMana_main .add_dialog .add_dialog_main .searchProduct_list li:hover {
+  color: #25ba80;
 }
