--- a/public/cms/less/pages/returnMana.less
+++ b/public/cms/less/pages/returnMana.less
@@ -39,6 +39,11 @@
           &:nth-of-type(6){
             width:190px;
           }
+          img{
+            width:40px;
+            height:40px;
+            margin:5px 0 0 0;
+          }
         }
       }
     }
