--- a/public/cms/css/pages/returnMana.css
+++ b/public/cms/css/pages/returnMana.css
@@ -459,6 +459,12 @@ table {
 #returnMana_main .return_table .return_tbody > p > span:nth-of-type(6) {
   width: 190px;
 }
+#returnMana_main .return_table .return_thead > p > span img,
+#returnMana_main .return_table .return_tbody > p > span img {
+  width: 40px;
+  height: 40px;
+  margin: 5px 0 0 0;
+}
 #returnMana_main .return_table .return_thead {
   height: 40px;
   line-height: 40px;
