--- a/public/frontend/less/pages/login.less
+++ b/public/frontend/less/pages/login.less
@@ -149,4 +149,39 @@
       }
     }
   }
+  .forgetPasswordDialog{
+    font-size:14px;
+    button{
+      padding:10px 20px;
+    }
+    .main{
+      width: 60%;
+      min-width: 150px;
+      margin: 0 auto;
+      p {
+        input{
+          box-sizing: border-box;
+        }
+        margin-top: 10px;
+        .firstInput{
+          width:60%;
+        }
+        .secondInput{
+          width:100% ;
+        }
+      }
+      p:nth-of-type(1){
+        button{
+          float: right;
+          color: #5a5a5a;
+        }
+      }
+    }
+    .dialog-footer{
+        button {
+          color: #fff!important;
+          font-size: 18px!important;
+        }
+    }
+  }
 }
