--- a/public/frontend/less/pages/home.less
+++ b/public/frontend/less/pages/home.less
@@ -21,7 +21,7 @@
   }
   .product_nav{
     width:1120px;
-    margin:0 auto;
+    margin:0 auto 40px auto;
     .oneProduct_nav{
       display:inline-block;
       width:560px;
@@ -34,6 +34,7 @@
         float:left;
       }
       .oneProduct_nav_img{
+        box-shadow:0 4px 30px rgba(0, 0, 0, 0.15);
         >img{
           width: 280px;
           height: 280px;
@@ -49,21 +50,23 @@
         }
       }
       .oneProduct_nav_desc{
-        padding:20px;
         >h4{
           font-size: 18px;
-          margin: 0 0 10px 0;
+          text-align:center;
+          margin: 131px 0;
         }
       }
     }
   }
   .product_sell,.product_recom{
     text-align:center;
+    margin:0 0 40px 0;
     >h3{
       height:35px;
       line-height:35px;
       font-size: 20px;
       color: #585858;
+      margin:0 0 20px 0;
     }
     .oneProduct{
       display:inline-block;
@@ -89,6 +92,7 @@
         box-sizing:border-box;
         width:271px;
         height:60px;
+        line-height:40px;
         padding:10px;
         background-color: #E8E8E8;
       }
