--- a/public/frontend/css/pages/home.css
+++ b/public/frontend/css/pages/home.css
@@ -104,7 +104,7 @@ table {
   height: 30px;
   position: absolute;
   top: 13px;
-  left: 15px;
+  left: 78px;
 }
 #topBar .topBar_menu {
   width: 560px;
@@ -374,7 +374,7 @@ table {
 }
 #home_main .product_nav {
   width: 1120px;
-  margin: 0 auto;
+  margin: 0 auto 40px auto;
 }
 #home_main .product_nav .oneProduct_nav {
   display: inline-block;
@@ -388,6 +388,9 @@ table {
   height: 280px;
   overflow: hidden;
   float: left;
+}
+#home_main .product_nav .oneProduct_nav .oneProduct_nav_img {
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.15);
 }
 #home_main .product_nav .oneProduct_nav .oneProduct_nav_img > img {
   width: 280px;
@@ -403,16 +406,15 @@ table {
 #home_main .product_nav .oneProduct_nav .oneProduct_nav_img:hover > img {
   transform: scale(1.3);
 }
-#home_main .product_nav .oneProduct_nav .oneProduct_nav_desc {
-  padding: 20px;
-}
 #home_main .product_nav .oneProduct_nav .oneProduct_nav_desc > h4 {
   font-size: 18px;
-  margin: 0 0 10px 0;
+  text-align: center;
+  margin: 131px 0;
 }
 #home_main .product_sell,
 #home_main .product_recom {
   text-align: center;
+  margin: 0 0 40px 0;
 }
 #home_main .product_sell > h3,
 #home_main .product_recom > h3 {
@@ -420,6 +422,7 @@ table {
   line-height: 35px;
   font-size: 20px;
   color: #585858;
+  margin: 0 0 20px 0;
 }
 #home_main .product_sell .oneProduct,
 #home_main .product_recom .oneProduct {
@@ -451,6 +454,7 @@ table {
   box-sizing: border-box;
   width: 271px;
   height: 60px;
+  line-height: 40px;
   padding: 10px;
   background-color: #E8E8E8;
 }
