--- a/public/frontend/less/pages/product_search.less
+++ b/public/frontend/less/pages/product_search.less
@@ -4,7 +4,7 @@
 #product_search_main {
   .product_list {
     text-align: center;
-    margin: 0 0 60px 0;
+    margin: 30px 0 40px 0;
     .oneProduct {
       display: inline-block;
       width: 271px;
