--- a/public/frontend/css/pages/product_search.css
+++ b/public/frontend/css/pages/product_search.css
@@ -370,7 +370,7 @@ table {
 }
 #product_search_main .product_list {
   text-align: center;
-  margin: 0 0 60px 0;
+  margin: 30px 0 40px 0;
 }
 #product_search_main .product_list .oneProduct {
   display: inline-block;
