--- a/public/cms/css/pages/carousel.css
+++ b/public/cms/css/pages/carousel.css
@@ -420,18 +420,114 @@ table {
   background-color: #f1f1f1;
   font-size: 14px;
 }
-#carousel_main .clearfix:after {
-  content: ".";
-  height: 0;
-  display: block;
-  clear: both;
-  visibility: hidden;
+#carousel_main .head {
+  height: 72px;
+  line-height: 72px;
+  overflow: hidden;
+  position: relative;
 }
-#carousel_main .el-dialog {
+#carousel_main .head .tab_ul {
+  height: 32px;
+  margin: 20px 0 20px 40px;
+}
+#carousel_main .head .tab_ul li {
+  cursor: default;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  padding: 0 20px;
+  background-color: #ffffff;
+  float: left;
+}
+#carousel_main .head .tab_ul li:nth-of-type(1) {
+  border-top: solid 1px #cccccc;
+  border-bottom: solid 1px #cccccc;
+  border-left: solid 1px #cccccc;
+}
+#carousel_main .head .tab_ul li:nth-of-type(2) {
+  border: solid 1px #cccccc;
+}
+#carousel_main .head .tab_ul li.active {
+  color: #25ba80;
+  border: solid 1px #25ba80;
+}
+#carousel_main .head button {
+  width: 60px;
+  height: 28px;
+  position: absolute;
+  top: 22px;
+  right: 88px;
+}
+#carousel_main .carousel_table {
+  width: 98%;
+  height: 670px;
+  border-radius: 4px;
+  background: #F1F1F1;
+  margin: 0 auto;
+}
+#carousel_main .carousel_table .carousel_thead > p,
+#carousel_main .carousel_table .carousel_tbody > p {
+  background: #fff;
+}
+#carousel_main .carousel_table .carousel_thead > p > span,
+#carousel_main .carousel_table .carousel_tbody > p > span {
+  display: inline-block;
+  text-indent: 10px;
+  vertical-align: top;
+}
+#carousel_main .carousel_table .carousel_thead > p > span:nth-of-type(1),
+#carousel_main .carousel_table .carousel_tbody > p > span:nth-of-type(1) {
+  width: 80px;
+  margin: 0 0 0 50px;
+}
+#carousel_main .carousel_table .carousel_thead > p > span:nth-of-type(2),
+#carousel_main .carousel_table .carousel_tbody > p > span:nth-of-type(2) {
+  width: 350px;
+}
+#carousel_main .carousel_table .carousel_thead > p > span:nth-of-type(3),
+#carousel_main .carousel_table .carousel_tbody > p > span:nth-of-type(3) {
+  width: 320px;
+}
+#carousel_main .carousel_table .carousel_thead > p > span:nth-of-type(4),
+#carousel_main .carousel_table .carousel_tbody > p > span:nth-of-type(4) {
+  width: 300px;
+}
+#carousel_main .carousel_table .carousel_thead {
+  height: 40px;
+  line-height: 40px;
+  margin: 0 0 4px 0;
+}
+#carousel_main .carousel_table .carousel_tbody {
+  color: #2c3347;
+}
+#carousel_main .carousel_table .carousel_tbody > p {
+  height: 80px;
+  line-height: 80px;
+  margin: 0 0 4px 0;
+  position: relative;
+}
+#carousel_main .carousel_table .carousel_tbody > p > span {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+#carousel_main .carousel_table .carousel_tbody > p > span img {
+  width: 60px;
+  height: 60px;
+  margin: 10px 0;
+}
+#carousel_main .carousel_table .carousel_tbody > p > span img.upload {
+  cursor: pointer;
+}
+#carousel_main .carousel_table .carousel_tbody > p button {
+  height: 25px;
+  padding: 0 5px;
+}
+.addCarousel_dialog {
   width: 560px;
   border-radius: 20px;
 }
-#carousel_main .el-dialog input {
+.addCarousel_dialog .addCarousel_dialog_main input {
   width: 500px;
   height: 40px;
   line-height: 40px;
@@ -439,32 +535,4 @@ table {
   font-size: 18px;
   color: #5a5a5a;
   padding-left: 10px;
-}
-#carousel_main .el-dialog p {
-  background: url("/images/nopic.png") no-repeat;
-  background-size: 256px 146px;
-  width: 258px;
-  height: 146px;
-  margin-left: 136px;
-  margin-top: 10px;
-}
-#carousel_main .el-dialog p > img {
-  width: 100%;
-  height: 100%;
-}
-#carousel_main .el-dialog .dialog-footer {
-  text-align: center;
-  margin-bottom: 30px;
-}
-#carousel_main .el-dialog .dialog-footer button {
-  width: 100px;
-  height: 32px;
-}
-#carousel_main .el-dialog .dialog-footer .el-button--default {
-  color: #25ba80;
-  border: 1px solid #25ba80;
-}
-#carousel_main .el-dialog .dialog-footer .el-button--primary {
-  color: #fff;
-  background-color: #25ba80;
 }
